# federation-x

./: .gitignore  BRANCH_COMPARISON.md  CLUSTER_AUTOMATION_README.md  EVALUATION_GUIDE.md  FIX_SUMMARY.md  FLORALAB_ANALYSIS.md  FL_GUIDE_20MIN_UPDATED.md  GITHUB_PAGES_SETUP.md  IMPORTANT_NOTE.md  README.md  STRATEGY_SUMMARY.md  check_status.sh  deploy_and_test.sh  evaluate.py  monitor_20min.sh  overnight_queue.sh  preflight_20min.sh  pyproject.toml  quick_submit.sh  run_full_pipeline.sh  setup_ssh_keys.sh  show_config.sh  submit_job1.sh  submit_job1_flexible.sh  submit_job1_with_password.sh  submit_job2.sh  submit_job3.sh  upload_model_to_wandb.py
.github/workflows/: pages.yml
cold_start_hackathon/: losses.py  server_app.py  task.py  util.py
docs/: _config.yml  architecture.md  faq.md  getting-started.md  index.md  pitch.md
