# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coldstart"
version = "1.0.0"
description = ""
license = "Apache-2.0"
requires-python = ">=3.9,<3.14"
dependencies = [
    "flwr[simulation]>=1.23.0",
    "ray>=2.0.0",
    "torch",
    "torchvision",
    "datasets",
    "scipy",
    "scikit-learn",
    "wandb",

    # Analysis and visualization
    "jupyterlab",
    "marimo",
    "pandas",
    "matplotlib",
    "seaborn",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "hackathon"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "cold_start_hackathon.server_app:app"
clientapp = "cold_start_hackathon.client_app:app"

# Custom config values accessible via `context.run_config`
# 20-MINUTE OPTIMIZED CONFIGURATION (Updated Nov 15, 2025)
[tool.flwr.app.config]
image-size = 128              # Keep 128 for speed
num-server-rounds = 9         # Fits in 20 min (was 7 for 15 min)
local-epochs = 3              # Balance of speed/quality
lr = 0.01                     # Aggressive initial learning (for Job 1)

# Default federation to use when running the app
[tool.flwr.federations]
default = "cluster-gpu"

# Local simulation federation with 3 virtual SuperNodes (one per hospital)
[tool.flwr.federations.local-simulation]
options.num-supernodes = 3

[tool.flwr.federations.cluster-gpu]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.33

[tool.flwr.federations.cluster-cpu]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 2

[tool.flwr.federations.supergrid-deployment]
address = "supergrid.flower.ai"
enable-account-auth = true
