# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coldstart"
version = "1.0.0"
description = "Federated Learning for Chest X-ray Classification - Privacy-preserving medical image analysis across hospital silos"
authors = [{name = "Cold Start Hackathon Team", email = "team@federation-x.io"}]
keywords = ["federated-learning", "privacy", "medical-imaging", "chest-xray", "distributed-training"]
license = "Apache-2.0"
requires-python = ">=3.9,<3.14"
dependencies = [
    "flwr[simulation]>=1.23.0",
    "ray>=2.0.0",
    "torch",
    "torchvision",
    "datasets",
    "scipy",
    "scikit-learn",
    "wandb",

    # Analysis and visualization
    "jupyterlab",
    "marimo",
    "pandas",
    "matplotlib",
    "seaborn",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "hackathon"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "cold_start_hackathon.server_app:app"
clientapp = "cold_start_hackathon.client_app:app"

# =====================================================================
# Custom config values accessible via `context.run_config`
# =====================================================================
# Updated for 20-minute job optimization (Nov 15, 2025)
# See FL_GUIDE_20MIN_UPDATED.md for detailed strategy
# =====================================================================
[tool.flwr.app.config]
image-size = 128              # Image size: 128x128 (balanced for speed/quality)
num-server-rounds = 100       # Default rounds (override per job: 9 for 20min)
local-epochs = 1              # Local epochs per client per round
lr = 0.01                     # Learning rate (adjust per job: 0.01, 0.005, 0.001)

# Default federation to use when running the app
[tool.flwr.federations]
default = "cluster-gpu"

# Local simulation federation with 3 virtual SuperNodes (one per hospital)
[tool.flwr.federations.local-simulation]
options.num-supernodes = 3

[tool.flwr.federations.cluster-gpu]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.33

[tool.flwr.federations.cluster-cpu]
options.num-supernodes = 3
options.backend.client-resources.num-cpus = 2

[tool.flwr.federations.supergrid-deployment]
address = "supergrid.flower.ai"
enable-account-auth = true
